separated h1 and header styling, deleted h1 float left, and fixed the wonky spacing/off nav and portfolio section while doing so.

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ p {
 
 #portfolio {
   height: auto;
+  overflow: auto;
 }
 
 #skills {
@@ -37,6 +38,7 @@ footer {
 
 .full-width {
   width: 1200px;
+  margin: 0 auto;
 }
 
 .half-width {
@@ -82,6 +84,7 @@ nav ul li {
 
 ul {
   margin-top: 0;
+  padding-left: 20px;
 }
 
 a {
@@ -97,31 +100,28 @@ a {
 header {
   background: url('../img/hero-background.png');
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
-header, h1 {
+h1 {
   font-family: 'Lato', sans-serif;
   font-size: 30px;
   font-weight: 400;
-  float: left;
+  margin: 0 0 10px 20px;
 }
 
-header, h1:before {
+h1:before {
   content: "<";
   font-family: 'Lato', sans-serif;
   font-size: 30px;
   font-weight: 400;
 }
 
-header, h1:after {
+h1:after {
   content: " />";
   font-family: 'Lato', sans-serif;
   font-size: 30px;
   font-weight: 400;
-}
-
-h1 {
-  margin: 0px 150px 0 20px;
 }
 
 header h2 {
@@ -136,6 +136,7 @@ header span.code-txt {
   font-family: 'Source Code Pro', monospace;
   font-size: 72px;
   color: #BDA9B6;
+  padding: 0 7px;
 }
 
 span.code-txt:before {
